--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,9 +7,13 @@ Authors@R:
            role = c("aut", "cre"),
            email = "qiang.hu@roswellpark.org")
 Description: A collection of pipeline recipes based on Rcwl.
-Depends: R (>= 3.5), Rcwl, BiocParallel, jsonlite
+Depends: R (>= 3.5), Rcwl, BiocParallel, jsonlite, shiny
 License: GPL
 Encoding: UTF-8
 LazyData: true
 Suggests: 
-    testthat
+    testthat,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
+RoxygenNote: 6.1.1
