--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,5 @@ Suggests:
     rmarkdown
 VignetteBuilder: knitr
 RoxygenNote: 6.1.1
-biocViews: Software, WorkflowStep, Alignment, Preprocessing, QualityControl,
-	   Workflow, BasicWorkflow, GeneExpressionWorkflow, GenomicVariantsWorkflow
+biocViews: Software, WorkflowStep, Alignment, Preprocessing, QualityControl
 SystemRequirements: nodejs
