package structure changed; add cwlTools function; updated vignette

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: RcwlPipelines
 Title: Bioinformatics pipelines based on Rcwl
-Version: 0.99.2
+Version: 0.99.3
 Authors@R: 
     person(given = "Qiang",
            family = "Hu",
            role = c("aut", "cre"),
            email = "qiang.hu@roswellpark.org")
 Description: A collection of Bioinformatics pipeline recipes based on Rcwl.
-Depends: R (>= 3.6), Rcwl
+Depends: R (>= 3.6), Rcwl, BiocFileCache
+Imports: dplyr, rappdirs
 License: GPL-2
 Encoding: UTF-8
 Suggests: 
@@ -16,5 +17,6 @@ Suggests:
     rmarkdown
 VignetteBuilder: knitr
 RoxygenNote: 6.1.1
-biocViews: Software, WorkflowStep, Alignment, Preprocessing, QualityControl
+biocViews: Software, WorkflowStep, Alignment, Preprocessing, QualityControl,
+	   ImmunoOncolgy
 SystemRequirements: nodejs
