--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: RcwlPipelines
 Title: Bioinformatics pipelines based on Rcwl
-Version: 0.99.3
+Version: 0.99.4
 Authors@R: 
     person(given = "Qiang",
            family = "Hu",
@@ -18,5 +18,5 @@ Suggests:
 VignetteBuilder: knitr
 RoxygenNote: 6.1.1
 biocViews: Software, WorkflowStep, Alignment, Preprocessing, QualityControl,
-	   ImmunoOncolgy
+	   ImmunoOncology
 SystemRequirements: nodejs
