--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: RcwlPipelines
 Title: Bioinformatics pipelines based on Rcwl
-Version: 0.99.6
+Version: 0.99.7
 Authors@R: 
-    person(given = "Qiang",
-           family = "Hu",
-           role = c("aut", "cre"),
-           email = "qiang.hu@roswellpark.org")
+    c(person(given = "Qiang", family = "Hu",
+             role = c("aut", "cre"),
+             email = "qiang.hu@roswellpark.org"),
+      person(given = "Shuang", family = "Gao",
+	     role = c("aut"),
+	     email = "shuang.gao@roswellpark.org"))
 Description: A collection of Bioinformatics pipeline recipes based on Rcwl.
 Depends: R (>= 3.6), Rcwl, BiocFileCache
 Imports: dplyr, rappdirs
