--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: RcwlPipelines
 Title: Bioinformatics pipelines based on Rcwl
-Version: 0.99.8
+Version: 0.99.9
 Authors@R: 
     c(person(given = "Qiang", family = "Hu",
              role = c("aut", "cre"),
@@ -20,5 +20,5 @@ Suggests:
 VignetteBuilder: knitr
 RoxygenNote: 6.1.1
 biocViews: Software, WorkflowStep, Alignment, Preprocessing, QualityControl,
-	   ImmunoOncology
+	   DNASeq, RNASeq, DataImport, ImmunoOncology
 SystemRequirements: nodejs
