--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(GetPileupSummaries)
 export(Mutect2)
 export(Mutect2PL)
 export(PoN)
+export(RSeQC)
 export(STAR)
 export(alignMerge)
 export(bcfview)
@@ -46,6 +47,7 @@ export(sam2bam)
 export(samtools_flagstat)
 export(samtools_index)
 export(sortBam)
+export(starFusion)
 import(BiocFileCache)
 import(Rcwl)
 import(dplyr)
