update bwa align pipeline

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -61,7 +61,8 @@ Collate:
     'tl_bwa.R'
     'pl_bwaAlign.R'
     'pl_alignMerge.R'
-    'pl_bwaAlignRecal.R'
+    'pl_bwaMMRecal.R'
+    'pl_bwaMRecal.R'
     'pl_hapCall.R'
     'pl_jdCall.R'
     'tl_featureCounts.R'
