--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,8 @@ export(blastn)
 export(bowtie2)
 export(bowtie2_build)
 export(bwa)
+export(bwaMMRecal)
+export(bwaMRecal)
 export(bwa_index)
 export(cutadapt)
 export(cwlTools)
