--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,13 +9,22 @@ export(GAlign)
 export(GPoN)
 export(GenomicsDB)
 export(GetPileupSummaries)
+export(LoFreq)
+export(MuSE)
 export(Mutect2)
 export(Mutect2PL)
 export(PoN)
 export(RSeQC)
 export(STAR)
+export(SomaticSniper)
+export(VarDict)
+export(VarScan2Somatic)
+export(VarScan2_processSomatic)
+export(VarScan2_somatic)
+export(VarScan2_somaticFilter)
 export(alignMerge)
 export(bcfview)
+export(bgzip)
 export(blastn)
 export(bowtie2)
 export(bowtie2_build)
@@ -35,7 +44,9 @@ export(hisat2_align)
 export(hisat2_build)
 export(htseq)
 export(jdCall)
+export(lancet)
 export(makeblastdb)
+export(manta)
 export(markdup)
 export(mergeBam)
 export(multiqc)
@@ -48,8 +59,11 @@ export(salmon_quant)
 export(sam2bam)
 export(samtools_flagstat)
 export(samtools_index)
+export(samtools_mpileup)
 export(sortBam)
 export(starFusion)
+export(strelka)
+export(tabix_index)
 import(BiocFileCache)
 import(Rcwl)
 import(dplyr)
