--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,10 +47,13 @@ export(jdCall)
 export(lancet)
 export(makeblastdb)
 export(manta)
+export(mantaStrelka)
 export(markdup)
 export(mergeBam)
 export(multiqc)
 export(mvOut)
+export(neusomatic)
+export(polysolver)
 export(read_distribution)
 export(rnaseq_Sf)
 export(runWDL)
@@ -67,4 +70,6 @@ export(tabix_index)
 import(BiocFileCache)
 import(Rcwl)
 import(dplyr)
+importFrom(jsonlite,fromJSON)
+importFrom(methods,is)
 importFrom(rappdirs,user_cache_dir)
