--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -109,9 +109,12 @@ Collate:
     'tl_BedToIntervalList.R'
     'tl_DepthOfCoverage.R'
     'tl_Funcotator.R'
+    'tl_SVE.R'
+    'tl_SVE_VP.R'
     'tl_SamToFastq.R'
     'tl_VarScan2.R'
     'tl_annovar.R'
+    'tl_bamCoverage.R'
     'tl_blastn.R'
     'tl_bowtie2.R'
     'tl_bowtie2_build.R'
