--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(RSeQC)
 export(ReadBackedPhasing)
 export(RenameSampleInVcf)
 export(STAR)
+export(SVE)
 export(SamToFastq)
 export(SomaticCallers)
 export(SomaticSniper)
@@ -34,6 +35,7 @@ export(VarScan2_somatic)
 export(VarScan2_somaticFilter)
 export(alignMerge)
 export(annovar)
+export(bamCoverage)
 export(bam_readcount)
 export(bcfview)
 export(bgzip)
