--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Suggests:
     testthat,
     knitr,
     rmarkdown,
-    BiocStyle
+    BiocStyle,
+    dplyr
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
 biocViews: Software, WorkflowStep, Alignment, Preprocessing, QualityControl,
