--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,13 @@ export(cwlInstall)
 export(cwlLoad)
 export(cwlSearch)
 export(cwlUpdate)
+export(searchContainer)
 import(BiocFileCache)
 import(Rcwl)
 import(methods)
 import(utils)
+importFrom(S4Vectors,DataFrame)
 importFrom(git2r,clone)
+importFrom(httr,GET)
+importFrom(httr,content)
 importFrom(rappdirs,user_cache_dir)
