--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(cwlSearch)
 export(cwlUpdate)
 export(searchContainer)
 export(title)
+exportMethods("[")
 exportMethods(mcols)
 import(BiocFileCache)
 import(Rcwl)
