export 'cwlHub' class, update class documentation.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,10 @@ export(cwlSearch)
 export(cwlUpdate)
 export(searchContainer)
 export(title)
+exportClasses(cwlHub)
 exportMethods("[")
 exportMethods(mcols)
+exportMethods(show)
 import(BiocFileCache)
 import(Rcwl)
 import(methods)
